# skillet

./: .pre-commit-config.yaml  README.md  devnotes.md
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml  release.yml  tag-release-reminder.yml  update-docs.yml
docs/: cli.md
skillet/: Cargo.toml
skillet/src/: aws.rs  aws_helpers.rs  cli.rs  config.rs  main.rs
skillet/src/commands/: conf.rs
