[package]
name = "skillet"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bpgould/skillet"
description = "An OpenTofu runtime to extend and standardize your IaC implementation."
keywords = ["OpenTofu", "Terraform", "runtime", "automation", "infrastructure", "IaC"]
homepage= "https://github.com/bpgould/skillet"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.7.4"
colored_json = "5.0.0"
clap-markdown = "0.1.5"
aws-sdk-sts = "1"
tokio = { version = "1", features = ["full"] }
ini = "1"
dirs = "6.0.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }